proposals_discussion: added topic model

--- a/views/content_viewer/discussion.html.erb
+++ b/views/content_viewer/discussion.html.erb
@@ -2,11 +2,26 @@
   <%= @page.body %>
 </div>
 
-<%= link_to url_for({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Proposal", :parent_id => @page.id}), :class => 'button with-text icon-add' do %>
-  <strong><%= _("New Proposal") %></strong>
+<% if @page.allow_create?(user) %>
+<div class="actions">
+  <%= link_to url_for({:controller => 'cms', :action => 'new', :type => "ProposalsDiscussionPlugin::Topic", :parent_id => @page.id}), :class => 'button with-text icon-add' do %>
+    <strong><%= _("New Topic") %></strong>
+  <% end %>
+</div>
 <% end %>
 
-<div class="proposals">
-  <%= render :partial => 'content_viewer/proposal_card', :collection => discussion.children %>
+<div class="topics">
+  <h3><%= _('Discussion Topics') %></h3>
+  <% @page.topics.includes(:profile).each do |topic| %>
+    <div class="topic"><%= link_to topic.title, topic.view_url %></div>
+  <% end %>
   <div class="clear"></div>
 </div>
+
+<div class="actions">
+  <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'select_topic', :parent_id => @page.id}), :class => 'button with-text icon-add' do %>
+    <strong><%= _("Send my proposal") %></strong>
+  <% end %>
+</div>
+
+<%= render :partial => 'content_viewer/proposals_list', :locals => {:holder => @page} %>
