--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,39 @@
 .proposal {
   background: rgb(236, 236, 236);
-  width: 31%;
+  width: 100%;
   min-width: 272px;
-  display: inline-block;
+  display: table;
   vertical-align: top;
-  margin: 5px 13px 5px 0;
+  margin: 12px 13px 12px 0;
   box-shadow: 5px 5px 5px -2px #ddd;
+  padding: 5px;
 }
 
-.proposal:hover {
+.article-body-proposals-discussion-plugin_discussion .actions,
+.article-body-proposals-discussion-plugin_topic .actions {
+  margin: 10px 0 25px 0;
+}
+
+.proposal .content, .proposal .score, .proposal .topic {
+  display: table-cell;
+  border-right: 1px solid;
+  border-color: rgb(201, 201, 201);
+}
+.proposal .topic {
+  border-right: 0;
+  text-align: center;
+  width: 30%;
+}
+.proposal .score {
+  width: 8%;
+  text-align: center;
+}
+
+.proposal .content:hover, .proposal .topic:hover {
   background: rgb(223, 223, 223);
 }
 
 .proposal .title {
-  background: rgba(0, 0, 0, 0.1);
   font-weight: bold;
   font-size: 15px;
 }
@@ -25,46 +45,17 @@
   display: inline-block;
 }
 
-#article .proposal .title {
-  padding: 0px 5px;
-}
-
 #article .proposal .title a {
   padding: 8px 0px;
 }
 
 .proposal .content {
-  padding: 5px;
+  width: 60%;
   color: rgb(83, 83, 83);
 }
 
 .proposal .abstract {
   padding-top: 8px;
-}
-
-.proposal .info {
-  float: left;
-}
-
-.proposal .info .comments {
-  background: url('/plugins/proposals_discussion/images/comments.gif') no-repeat left/15px;
-  padding-left: 18px;
-  display: inline;
-  font-size: 10px;
-  color: rgb(82, 82, 82);
-  opacity: 0.6;
-}
-
-.proposal .actions {
-  float: right;
-}
-
-.proposal .actions .vote-actions {
-  position: static;
-}
-
-.proposal .actions .vote-actions .vote-action a {
-  opacity: 0.6;
 }
 
 form .proposals-discussion-plugin textarea {
