--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+.private-proposals .proposal {
+  background: rgb(249, 252, 193);
+}
+
 .proposal {
   background: rgb(236, 236, 236);
   width: 100%;
@@ -30,7 +34,7 @@
 }
 
 .proposal .content:hover, .proposal .topic:hover {
-  background: rgb(223, 223, 223);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .proposal .title {
