--- a/views/content_viewer/proposal.html.erb
+++ b/views/content_viewer/proposal.html.erb
@@ -17,3 +17,11 @@
   <h5><%= _('Body') %></h4>
   <div class="content"><%= @page.body %></div>
 </div>
+
+<% if @page.allow_edit?(user) && !@page.published %>
+<div class="actions">
+  <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'publish_proposal', :proposal_id => @page.id}), :class => 'button with-text icon-add' do %>
+    <strong><%= _("Publish") %></strong>
+  <% end %>
+</div>
+<% end %>
