--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -4,7 +4,7 @@
       <%= link_to proposal_card.name, proposal_card.view_url %>
     </div>
     <div class="abstract">
-      <%= link_to strip_tags(proposal_card.lead), proposal_card.view_url %>
+      <%= link_to strip_tags(proposal_card.abstract), proposal_card.view_url %>
     </div>
   </div>
   <div class="score">
