--- a/views/content_viewer/_proposals_list_content.html.erb
+++ b/views/content_viewer/_proposals_list_content.html.erb
@@ -1,5 +1,9 @@
+<% unless proposals.empty? %>
+  <h5><%= _('Proposals') %></h5>
+<% end %>
+
 <%= render :partial => 'content_viewer/proposal_card', :collection => proposals %>
 
 <div class="more">
-  <%= link_to _('More'), url_for({:controller => 'proposals_discussion_plugin_public', :action => 'load_proposals', :holder_id => holder.id, :profile => profile.identifier, :page => next_page }) %>
+  <%= link_to _('More'), url_for({:controller => 'proposals_discussion_plugin_public', :action => 'load_proposals', :holder_id => holder.id, :profile => profile.identifier, :page => page }) %>
 </div>
