--- a/views/content_viewer/_proposals_list.html.erb
+++ b/views/content_viewer/_proposals_list.html.erb
@@ -17,6 +17,7 @@
 </div>
 <% end %>
 
+<h5><%= _('Proposals') %></h5>
 <div class="proposals">
   <div class="more">
     <img src="/images/loading.gif" alt="Loading" /><%= _("Loading...") %>
