--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -1,4 +1,5 @@
 <div class="proposal">
+  <div class="topic-color" style="background-color: <%= proposal_card.topic.color %>;"></div>
   <div class="content">
     <div class="title">
       <%= link_to proposal_card.name, proposal_card.view_url %>
