--- a/views/content_viewer/proposal.html.erb
+++ b/views/content_viewer/proposal.html.erb
@@ -20,7 +20,7 @@
 
 <% if @page.allow_edit?(user) && !@page.published %>
 <div class="actions">
-  <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'publish_proposal', :proposal_id => @page.id}), :class => 'button with-text icon-add' do %>
+  <%= link_to url_for({:controller => 'proposals_discussion_plugin_myprofile', :action => 'publish_proposal', :proposal_id => @page.id}), :class => 'button with-text icon-suggest' do %>
     <strong><%= _("Publish") %></strong>
   <% end %>
 </div>
