--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,7 @@ form .proposals-discussion-plugin .body textarea {
   text-decoration: none;
   border-left: 1px solid rgb(185, 185, 185);
   padding: 0 5px;
+  color: #555753;
 }
 .proposals_list .filters a.selected {
   font-weight: bold;
