--- a/views/content_viewer/_proposals_list_content.html.erb
+++ b/views/content_viewer/_proposals_list_content.html.erb
@@ -1,5 +1,7 @@
 <%= render :partial => 'content_viewer/proposal_card', :collection => proposals %>
 
+<% extend ProposalsDiscussionPlugin::ProposalsListHelper %>
+
 <div class="more">
-  <%= link_to _('More'), url_for({:controller => 'proposals_discussion_plugin_public', :action => 'load_proposals', :holder_id => holder.id, :profile => profile.identifier, :page => page, :order => order }) %>
+  <%= more_proposals(_('More'), holder, order, page) %>
 </div>
