proposals_discussion: added twitter share button

--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -4,6 +4,9 @@
     <div class="title">
       <%= link_to proposal_card.name, proposal_card.view_url %>
     </div>
+    <div class="social">
+      <%= render :partial => 'content_viewer/social', :locals => {:proposal => proposal_card} %>
+    </div>
     <div class="abstract">
       <%= link_to strip_tags(proposal_card.abstract), proposal_card.view_url %>
     </div>
