--- a/views/content_viewer/_proposals_list.html.erb
+++ b/views/content_viewer/_proposals_list.html.erb
@@ -1,4 +1,6 @@
 <script src="/javascripts/plugins/proposals_discussion/jquery.jscroll.min.js" type="text/javascript"></script>
+<%= javascript_include_tag 'plugins/proposals_discussion/main.js' %>
+
 <script>
   jQuery(document).ready(function($) {
     function proposalsScroll() {
