--- a/views/cms/proposals_discussion_plugin/_topic.html.erb
+++ b/views/cms/proposals_discussion_plugin/_topic.html.erb
@@ -1,3 +1,7 @@
+<%= stylesheet_link_tag 'spectrum.css' %>
+<%= javascript_include_tag "spectrum.js" %>
+<%= javascript_include_tag "colorpicker-noosfero.js" %>
+
 <%= required_fields_message %>
 
 <%= required f.text_field('name', :size => '64', :maxlength => 150) %>
@@ -5,5 +9,5 @@
 
 <%= labelled_form_field(_('Description:'), text_area(:article, :body, :rows => 3, :cols => 64)) %>
 
-<!-- FIXME: Use the colorpicker component from AI2915 -->
-<%= labelled_form_field(_('Color:'), text_field(:article, :color)) %>
+<%= labelled_colorpicker_field(_('Color:'), :article, :color) %>
+<span id="color_preview" class = "color_marker" style="background-color: <%= @article.color %>" ></span>
