--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,9 @@ form .proposals-discussion-plugin .body textarea {
   float: right;
   margin-top: 4px;
 }
+.topics .proposals_list .filters {
+  display: none;
+}
 #article .proposals_list .filters a {
   text-decoration: none;
   border-left: 1px solid rgb(185, 185, 185);
@@ -108,9 +111,23 @@ form .proposals-discussion-plugin .body textarea {
   width: 48%;
   float: left;
   margin: 6px;
-  height: 450px;
   font-size: 10px;
   box-shadow: 5px 5px 5px -2px #ddd;
+}
+
+#content .topics .actions.topic-item a {
+  width: 93%;
+  display: inline-block;
+  height: 100px;
+  line-height: 100px;
+  border: 0;
+  border-radius: 0;
+  text-align: center;
+  background-position: 60px;
+  font-size: 20px;
+}
+#content .topics .actions.topic-item .topic-color {
+  background-color: #7293CF;
 }
 
 #content .topic-item h2, #article .article-body-proposals-discussion-plugin_topic h2 {
@@ -127,9 +144,6 @@ form .proposals-discussion-plugin .body textarea {
 }
 .topic-item .topic-content, #article .article-body-proposals-discussion-plugin_topic .topic-content {
   padding: 5px 7px 5px 2px;
-  position: relative;
-  height: 86%;
-  overflow: hidden;
 }
 .topic-content .description {
   font-size: 11px;
