--- a/public/style.css
+++ b/public/style.css
@@ -170,3 +170,18 @@ form .proposals-discussion-plugin .body textarea {
   position: absolute;
   top: -18px;
 }
+
+#content .tag_cloud a {
+  text-decoration: none;
+}
+
+#content .statistics {
+  display: inline-block;
+}
+#content .tag_cloud {
+  float: right;
+  width: 300px;
+  box-shadow: 5px 5px 5px -2px #ddd;
+  background-color: rgb(248, 248, 248);
+  min-height: 50px;
+}
