--- a/views/content_viewer/topic.html.erb
+++ b/views/content_viewer/topic.html.erb
@@ -15,25 +15,30 @@
 
 <% unless list_view %>
 <h4><%= topic.discussion.title %></h4>
-<div class="proposals-count">
-  <span class="label"><%= _('Number of Proposals: ') %></span>
-  <span class="content"><%= topic.proposals.count %></span>
+<div class="statistics">
+  <div class="proposals-count">
+    <span class="label"><%= _('Number of Proposals: ') %></span>
+    <span class="content"><%= topic.proposals.count %></span>
+  </div>
+  <div class="participants-count">
+    <span class="label"><%= _('Number of Participants: ') %></span>
+    <span class="content"><%= topic.proposals_authors.count %></span>
+  </div>
+  <div class="comments-count">
+    <span class="label"><%= _('Number of Comments: ') %></span>
+    <span class="content"><%= topic.proposals_comments.count %></span>
+  </div>
+  <div class="active-participants">
+    <span class="label"><%= _('Most active: ') %></span>
+    <span class="content">
+      <% topic.most_active_participants.each do |author| %>
+        <%= link_to profile_image(author, :icon), author.url, :title => author.name %>
+      <% end %>
+    </span>
+  </div>
 </div>
-<div class="participants-count">
-  <span class="label"><%= _('Number of Participants: ') %></span>
-  <span class="content"><%= topic.proposals_authors.count %></span>
-</div>
-<div class="comments-count">
-  <span class="label"><%= _('Number of Comments: ') %></span>
-  <span class="content"><%= topic.proposals_comments.count %></span>
-</div>
-<div class="active-participants">
-  <span class="label"><%= _('Most active: ') %></span>
-  <span class="content">
-    <% topic.most_active_participants.each do |author| %>
-      <%= link_to profile_image(author, :icon), author.url, :title => author.name %>
-    <% end %>
-  </span>
+<div class="tag_cloud">
+  <%= tag_cloud(topic.proposal_tags, :tag, {:action => :tag, :controller => 'search'}, :max_size => 18, :min_size => 10) %>
 </div>
 <% end %>
 
