--- a/views/cms/proposals_discussion_plugin/_proposal.html.erb
+++ b/views/cms/proposals_discussion_plugin/_proposal.html.erb
@@ -16,7 +16,7 @@
 
   <div class="body">
     <% editor_type = 'mceEditor' %>
-    <%= labelled_form_field(_('Text'), text_area(:article, :body, :class => editor_type)) %>
+    <%= labelled_form_field(@article.topic.discussion.custom_body_label, text_area(:article, :body, :class => editor_type)) %>
   </div>
 </div>
 
