--- a/views/content_viewer/proposal.html.erb
+++ b/views/content_viewer/proposal.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 <div class="body">
-  <h5><%= _('Body') %></h4>
+  <h5><%= @page.topic.discussion.custom_body_label %></h4>
   <div class="content"><%= @page.body %></div>
 </div>
 
