proposals_discussion: new score image

--- a/views/content_viewer/_proposal_card.html.erb
+++ b/views/content_viewer/_proposal_card.html.erb
@@ -2,8 +2,8 @@
   <div class="score">
     <% if proposal_card.published? %>
       <% normalized_score = proposal_card.normalized_score(@holder) %>
-      <% size = 25 - [5, normalized_score*25].max %>
-      <span title="<%= normalized_score %>" style="left:-<%= size %>px;background-position-x: <%= size %>px">&nbsp;</span>
+      <% pos = 26 * (normalized_score*4 - 1).round %>
+      <span title="<%= normalized_score %>" style="background-position-y: -<%= pos %>px">&nbsp;</span>
     <% end %>
   </div>
   <div class="content">
