proposals_discussion: facebook share button

--- a/views/content_viewer/_proposals_list.html.erb
+++ b/views/content_viewer/_proposals_list.html.erb
@@ -1,5 +1,7 @@
 <% extend ProposalsDiscussionPlugin::ProposalsListHelper %>
 
+<div id="fb-root"></div>
+
 <% private_proposals = user ? holder.proposals.private(user) : [] %>
 <% unless private_proposals.empty? %>
 <div class="private-proposals">
