proposals_discussion: fix infinite loading bug

--- a/views/content_viewer/_proposals_list_content.html.erb
+++ b/views/content_viewer/_proposals_list_content.html.erb
@@ -3,5 +3,5 @@
 <% extend ProposalsDiscussionPlugin::ProposalsListHelper %>
 
 <div class="more">
-  <%= more_proposals(_('More'), holder, order, page) %>
+  <%= more_proposals(_('More'), holder, order, page) unless proposals.empty? %>
 </div>
