--- a/public/style.css
+++ b/public/style.css
@@ -166,7 +166,9 @@ form .proposals-discussion-plugin .body textarea {
 .topic-content .description {
   font-size: 11px;
 }
-#article-header > h1 {
+#article .article-body-proposals-discussion-plugin_discussion #article-header > h1,
+#article .article-body-proposals-discussion-plugin_topic #article-header > h1,
+#article .article-body-proposals-discussion-plugin_proposal #article-header > h1 {
   display: none;
 }
 .proposal .content .actions {
