--- a/public/style.css
+++ b/public/style.css
@@ -135,6 +135,7 @@ form .proposals-discussion-plugin .body textarea {
   width: 93%;
   display: inline-block;
   height: 100px;
+  max-height: 100px;
   line-height: 100px;
   border: 0;
   border-radius: 0;
