--- a/public/style.css
+++ b/public/style.css
@@ -219,3 +219,7 @@ form .proposals-discussion-plugin .body textarea {
   clear: both;
   padding-top: 10px;
 }
+
+.proposal .actions .fb-share-button {
+  top: -3px;
+}
