--- a/views/content_viewer/_social.html.erb
+++ b/views/content_viewer/_social.html.erb
@@ -1,3 +1,3 @@
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="<%= url_for proposal.view_url %>" data-text="<%= proposal.title %>" data-count="none"></a>
 
-<div class="fb-share-button" data-href="<%= url_for proposal.view_url %>" data-layout="box-count"></div>
+<div class="fb-share-button" data-href="<%= url_for proposal.view_url %>"></div>
